--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -227,19 +227,29 @@ img {
   /* padding: 10px 15px 10px 15px; */
   /* background: #f5f5f5; */
   margin-top: 15px;
+  display: flex;
   border-top: 1px solid #f0f0f1;
 }
 .footer-post .btn-heart {
   float: left;
 }
 .footer-post .btn-footer-post {
-  float: left;
-  /* width: 25% ; */
+  /* float: left; */
+  display: flex;
+  /* height: 32px; */
+  justify-content: center;
+  /* align-items: center; */
+  /* width: 25%; */
+  white-space: nowrap;
+  width: 100%;
   cursor: pointer;
   font-size: 14px;
   padding: 10px 15px 10px 15px;
-  color: #aaaeb7;
+  color: #616770;
   font-weight: bold;
+  transition: 400ms cubic-bezier(0.08, 0.52, 0.52, 1) filter,
+    400ms cubic-bezier(0.08, 0.52, 0.52, 1) transform;
+  font-size: 13px;
 }
 .footer-post .btn-footer-post:hover {
   background: #f5f5f5;
@@ -249,6 +259,8 @@ img {
 }
 .footer-post .btn-footer-post i {
   font-size: 16px;
+  color: #727880;
+  margin-right: 10px;
 }
 .footer-post .btn-footer-post:hover .fa {
   font-weight: bold !important;
@@ -496,6 +508,7 @@ div[contenteditable="true"]:focus {
   background: url(https://moki.vn/moki/themes/img/background.png) no-repeat;
   width: 100%;
   height: 150px;
+  background-size: cover;
   /* top: 1px; */
 
   background-size: cover;
@@ -715,7 +728,7 @@ div[contenteditable="true"]:focus {
   /* padding: 20px 0 0 2px; */
   /* position: relative; */
   width: 179px;
-  z-index: 99999;
+  z-index: 1;
 }
 .div-item-action {
   display: flex;
@@ -736,4 +749,17 @@ header ul li:hover {
   background: #2a6d18;
 }
 header ul li {
+}
+.footer-post .fa-share,
+.footer-post .fa-thumbs-up {
+  color: white !important;
+  font-weight: bold;
+
+  /* text-shadow: -1px -1px 0 #626365, 1px -1px 0 #656a71, -1px 1px 0 #635e5e, 1px 1px 0 #6b6464; */
+  /* font-size: 19px !important; */
+  -webkit-text-stroke: 1.2px #a9a1a1;
+}
+.count-action {
+  font-weight: normal;
+  margin-right: 4px;
 }
