css  footer-post

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -168,8 +168,8 @@
 .content-like-post {
   padding: 6px;
   /* background: #f2f3f5; */
-  border-bottom: 1px solid #e2e6e4;
-  border-top: 1px solid #e2e6e4;
+  /* border-bottom: 1px solid #e2e6e4; */
+  /* border-top: 1px solid #e2e6e4; */
   padding-bottom: 9px;
   padding-top: 9px;
 }
