--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -226,7 +226,7 @@ img {
     padding-right: 15px; */
   /* padding: 10px 15px 10px 15px; */
   /* background: #f5f5f5; */
-  margin-top: 15px;
+  /* margin-top: 15px; */
   display: flex;
   border-top: 1px solid #f0f0f1;
 }
