--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -227,6 +227,7 @@ img {
   /* padding: 10px 15px 10px 15px; */
   /* background: #f5f5f5; */
   /* margin-top: 15px; */
+  /* border-bottom: 1px solid #f0f0f1; */
   display: flex;
   border-top: 1px solid #f0f0f1;
 }
