--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -77,7 +77,7 @@ header .dropdown-menu > li > a {
   font-family: initial;
 }
 .jumbotron {
-  background: #e9ebef;
+  background: #f3f3f3;
   padding-top: 67px !important;
   padding-bottom: 0px !important;
   padding-bottom: 0px !important;
