--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -15,6 +15,17 @@
     font-size: 20px;
   }
 }
+.input-post textarea.form-control{
+  border: 1px solid #fff !important;
+  border-radius: 0px !important;
+  outline: 0 !important;
+  -webkit-box-shadow: none !important;
+}
+.input-post textarea.form-control:focus{
+  border: 1px solid #fff !important;
+  border-radius: 0px !important;
+  outline: 0 !important;
+}
 header .dropdown-menu > li > a {
   font-size: 12px;
 }
@@ -30,6 +41,7 @@ header .dropdown-menu > li > a {
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 196px rgba(0, 0, 0, 1);
   z-index: 999;
+  border: 1px solid #ccccccbf;
 }
 .question,
 .vote,
