css Lgin vs listchat

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -164,8 +164,8 @@
 .alert-message a {
   color: #555;
 }
-.alert-message a :hover {
-  text-decoration: none;
+.alert-message a:hover,.alert-message a:focus {
+  text-decoration: none !important;
 }
 .time-alert {
   color: #89908e;
