--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -232,7 +232,9 @@
 }
 .list-friend {
   background-clip: padding-box;
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
+  background-color: #f7f7f7;
+
   /* #e9ebef; */
   border-left: 1px solid rgba(175, 169, 169, 0.4);
   /* box-shadow: inset 2px 0 2px -2px #b2b9c9; */
