--- a/assets/styles/group.css
+++ b/assets/styles/group.css
@@ -16,7 +16,7 @@
   background: white;
   padding-left: 10px;
   padding-right: 10px;
-  margin-left: 10px;
+  margin-top: 10px;
 }
 .group-relative .title .action {
   float: right;
