--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -110,8 +110,8 @@
   -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
   overflow: visible;
   position: absolute;
-  // top: 41px;
-  // margin-left: -332px;
+  top: 41px;
+  margin-left: -332px;
   width: 382px;
   z-index: 9999;
   display: none;
