--- a/assets/styles/userpage.css
+++ b/assets/styles/userpage.css
@@ -331,7 +331,7 @@ section#user_main div.content-main .left-list .text-box:after {
   left: -8px;
   width: 8px;
   height: 17px;
-  background: #f16e8e;
+  background: #288326;
 }
 section#user_main div.content-main .left-list aside {
   display: inline-block;
