add create group

--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -308,6 +308,8 @@ img {
 }
 .body-modal-post .row {
   padding-top: 15px;
+  display: flex;
+  align-items: center;
 }
 .content-question .react-toggle-track {
   height: 19px;
